# P7_OCR

./: Notebook_2_modelisation.ipynb  README.md  data_preparation.py  pyproject.toml
API/: API_requirements.txt  Home.py  backend.py  fct_interface.py
API/Tests/: test_backend.py
API/pages/: Evaluation.py  Interprétabilité.py
DataDrift/: Datadrift.py
Fonctions/: fct_data.py  fct_modelisation.py
