[tool.poetry]
name = "projet 7 ocr"
version = "0.1.0"
description = "Environnement virtuel projet 7 - OpenClassrooms"
authors = ["maxsch38"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.28.0"
numpy = "^1.26.3"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
scikit-learn = "^1.3.2"
xgboost = "^2.0.3"
hyperopt = "^0.2.7"
mlflow = "^2.9.2"
chardet = "^5.2.0"
evidently = "^0.4.13"
pydantic = "^1.8.2"
phik = "^0.12.3"
imbalanced-learn = "^0.11.0"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
shap = "^0.44.0"
streamlit = "^1.29.0"
pytest = "^7.4.4"
poetry = "^1.7.1"
lightgbm = "^4.2.0"
httpx = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
